--- a/server/.gitignore
+++ b/server/.gitignore
@@ -7,11 +7,15 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependency directories
 node_modules/
+
+# Build directories
 dist
 dist-ssr
-*.local
 
+# Local environment files
+*.local
 .env
 
 # Editor directories and files
