--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,18 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
+    "@babel/plugin-transform-class-properties": "^7.18.6",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-transform-numeric-separator": "^7.18.6",
+    "@babel/plugin-transform-optional-chaining": "^7.21.0",
+    "@babel/plugin-transform-private-methods": "^7.18.6",
+    "@babel/plugin-transform-private-property-in-object": "^7.21.11",
     "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
@@ -24,13 +32,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
-    "vite": "^6.0.1",
-    "@babel/plugin-transform-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-nullish-coalescing-operator": "^7.18.6",
-    "@babel/plugin-transform-private-methods": "^7.18.6",
-    "@babel/plugin-transform-class-properties": "^7.18.6",
-    "@babel/plugin-transform-numeric-separator": "^7.18.6",
-    "@babel/plugin-transform-optional-chaining": "^7.21.0"
+    "vite": "^6.0.1"
   },
   "eslintConfig": {
     "extends": [
