--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,18 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.2.0",
+    "axios": "^1.7.9",
     "jwt-decode": "^4.0.0",
+    "lorem-ipsum": "^2.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.0.2",
+    "react-toastify": "^10.0.6",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/plugin-transform-class-properties": "^7.18.6",
@@ -24,13 +32,13 @@
     "@babel/plugin-transform-private-methods": "^7.18.6",
     "@babel/plugin-transform-private-property-in-object": "^7.21.11",
     "@eslint/js": "^9.15.0",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.3.16",
+    "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.15.0",
+    "eslint": "^9.16.0",
     "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.12.0",
     "vite": "^6.0.1"
   },
