--- a/server/package.json
+++ b/server/package.json
@@ -16,18 +16,23 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "express-fileupload": "^1.5.1",
+    "express-openid-connect": "^2.17.1",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.4",
     "nodemailer": "^6.9.16",
     "prettier": "^3.3.3",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
