--- a/server/.gitignore
+++ b/server/.gitignore
@@ -17,7 +17,9 @@ dist-ssr
 # Local environment files
 *.local
 .env
-
+package.json
+package.lock.json
+package.md
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
