--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "react-rnd": "^10.4.13",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.6",
+    "react-scripts": "4.0.3",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
