--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "react-scripts test --env=jsdom"
+    "test": "vitest"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -51,7 +51,8 @@
     "globals": "^15.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/jest-dom": "^5.11.10",
-    "vite": "^6.0.3"
+    "vite": "^6.0.3",
+    "vitest": "^1.1.0"
   },
   "browserslist": {
     "production": [
