--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon app.js",
     "dev": "nodemon app.js",
     "build": "echo 'No build script defined for server'"
@@ -39,6 +39,7 @@
     "validator": "^13.12.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "jest": "^27.4.7"
   }
 }
