--- a/server/package.json
+++ b/server/package.json
@@ -39,7 +39,7 @@
     "validator": "^13.12.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7",
-    "jest": "^27.4.7"
+    "jest": "^27.4.7",
+    "nodemon": "^3.1.7"
   }
 }
