--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ cache:
     - node_modules/
 
 before_script:
-  - npm install -g firebase-tools
+  - npm install -g firebase-tools netlify-cli
 
 build:
   stage: build
@@ -26,6 +26,7 @@ deploy:
   script:
     - cd frontend
     - firebase deploy --token $FIREBASE_TOKEN
+    - netlify deploy --prod --dir=dist --auth=$NETLIFY_AUTH_TOKEN
   only:
     - main
   dependencies:
