--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@stripe/stripe-js": "^5.3.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "firebase": "^11.1.0",
     "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "lorem-ipsum": "^2.0.8",
@@ -35,12 +36,14 @@
     "react-paginate": "^8.2.0",
     "react-rnd": "^10.4.13",
     "react-router-dom": "^7.0.2",
-    "react-toastify": "^10.0.6",
     "react-scripts": "4.0.3",
+    "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.7",
     "@types/react": "^18.3.16",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
@@ -49,8 +52,6 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.12.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/jest-dom": "^5.11.10",
     "vite": "^6.0.3",
     "vitest": "^1.1.0"
   },
