--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,14 +2,13 @@ image: node:20
 
 stages:
   - build
-  - deploy
 
 cache:
   paths:
     - node_modules/
 
 before_script:
-  - npm install -g firebase-tools netlify-cli
+  - npm install
 
 build:
   stage: build
@@ -20,14 +19,3 @@ build:
   artifacts:
     paths:
       - frontend/dist/
-
-deploy:
-  stage: deploy
-  script:
-    - cd frontend
-    - firebase deploy --token $FIREBASE_TOKEN
-    - netlify deploy --prod --dir=dist --auth=$NETLIFY_AUTH_TOKEN
-  only:
-    - main
-  dependencies:
-    - build
