--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ before_script:
 build:
   stage: build
   script:
-    - cd frontend
+    - cd ../frontend
     - npm install
     - npm run build
   artifacts:
