--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,12 +21,14 @@
     "@stripe/stripe-js": "^5.4.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "dotenv": "^16.4.7",
     "firebase": "^11.1.0",
     "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "lorem-ipsum": "^2.0.8",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-big-calendar": "^1.17.1",
     "react-chartjs-2": "^5.2.0",
