--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "nodemailer": "^6.9.16",
     "pdfkit": "^0.15.2",
     "prettier": "^3.3.3",
+    "twilio": "^5.4.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
